1.AsyncTash练习2.排序练习3.

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -53,6 +53,7 @@
         </activity>
         <activity android:name=".AsynTask.AsynTaskActivity">
         </activity>
+        <activity android:name=".AsynTask.AsyncTaskActivity"/>
     </application>
 
 </manifest>
